--- a/src/Test_GeneticAlgo.ipynb
+++ b/src/Test_GeneticAlgo.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "called df\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from geneticalgorithm import geneticalgorithm as ga\n",
@@ -13,6 +21,52 @@
     "from GenAlgo import Genetic_Algo_No_Season\n",
     "from GenAlgo import Genetic_Algo_Seasonal\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "algorithm_param = {'max_num_iteration': 200,\\\n",
+    "                   'population_size':50,\\\n",
+    "                   'mutation_probability':0.5,\\\n",
+    "                   'elit_ratio': 0.01,\\\n",
+    "                   'crossover_probability': 0.5,\\\n",
+    "                   'parents_portion': 0.3,\\\n",
+    "                   'crossover_type':'uniform',\\\n",
+    "                   'max_iteration_without_improv':300}\n",
+    "\n",
+    "df = pd.read_csv(\"./TOTALSA.csv\")\n",
+    "mean = df['TOTALSA'].mean()\n",
+    "std = df['TOTALSA'].std()\n",
+    "varbound=np.array([[round(mean * 2), round(mean * 10)]]*7)\n",
+    "\n",
+    "def objective_no_season(X):\n",
+    "    return -1 * Genetic_Algo_No_Season(X) #7 parameters\n",
+    "\n",
+    "model2=ga(function=objective_no_season,\\\n",
+    "        dimension=7,variable_type='int',\\\n",
+    "        variable_boundaries=varbound, \\\n",
+    "        algorithm_parameters=algorithm_param)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__________________________________________________ 0.5% GA is running..."
+     ]
+    }
+   ],
+   "source": [
+    "model2.run() "
    ]
   },
   {
