--- a/RLsrc/PPOsupplychain.ipynb
+++ b/RLsrc/PPOsupplychain.ipynb
@@ -10986,6 +10986,7 @@
     }
    ],
    "source": [
+    "## Starting inventory is fixed at 65\n",
     "print(np.mean(reward_RL))"
    ]
   },
@@ -21891,6 +21892,7 @@
     }
    ],
    "source": [
+    "#Starting inventory can be chosen by the RL\n",
     "print(reward_RL)"
    ]
   },
