Edited stochastic lead time

--- a/RLsrc/RLTrain.ipynb
+++ b/RLsrc/RLTrain.ipynb
@@ -25,6 +25,7 @@
     "\n",
     "import torch\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from PPO import PPO"
    ]
   },
@@ -75,6 +76,12 @@
     "    np.random.seed(random_seed)\n",
     "\n",
     "    ################# training procedure ################\n",
+    "    \n",
+    "    df = pd.read_csv(\"../src/TOTALSA.csv\")\n",
+    "    mean = df['TOTALSA'].mean()\n",
+    "    std = df['TOTALSA'].std()\n",
+    "    \n",
+    "    ################## Get mean and std #################\n",
     "\n",
     "    # initialize a PPO agent\n",
     "    ppo_agent = PPO(state_dim, action_dim, lr_actor, lr_critic, gamma, K_epochs, eps_clip, has_continuous_action_space, action_std)\n",
@@ -95,7 +102,7 @@
     "    \n",
     "    # training loop\n",
     "    env = State()\n",
-    "    env.create_state([-1, 0, 1, 1, 2, 2])\n",
+    "    env.create_state([-1, 0, 1, 1, 2, 2], mean=mean, std=std)\n",
     "    while time_step <= max_training_timesteps:\n",
     "\n",
     "        state = env.reset()\n",
