--- a/src/Test_GeneticAlgo.ipynb
+++ b/src/Test_GeneticAlgo.ipynb
@@ -119,7 +119,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "__________________________________________________ 0.6% GA is running..."
+      "__________________________________________________ 0.7% GA is running..."
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m model2\u001b[39m.\u001b[39;49mrun()\n",
+      "File \u001b[1;32mc:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\geneticalgorithm\\geneticalgorithm.py:407\u001b[0m, in \u001b[0;36mgeneticalgorithm.run\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    405\u001b[0m pop[k]\u001b[39m=\u001b[39msolo\u001b[39m.\u001b[39mcopy()                \n\u001b[0;32m    406\u001b[0m solo[: \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdim]\u001b[39m=\u001b[39mch2\u001b[39m.\u001b[39mcopy()                \n\u001b[1;32m--> 407\u001b[0m obj\u001b[39m=\u001b[39m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msim(ch2)               \n\u001b[0;32m    408\u001b[0m solo[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdim]\u001b[39m=\u001b[39mobj\n\u001b[0;32m    409\u001b[0m pop[k\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m=\u001b[39msolo\u001b[39m.\u001b[39mcopy()\n",
+      "File \u001b[1;32mc:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\geneticalgorithm\\geneticalgorithm.py:542\u001b[0m, in \u001b[0;36mgeneticalgorithm.sim\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    540\u001b[0m obj\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m\n\u001b[0;32m    541\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 542\u001b[0m     obj\u001b[39m=\u001b[39mfunc_timeout(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfuntimeout,\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mevaluate)\n\u001b[0;32m    543\u001b[0m \u001b[39mexcept\u001b[39;00m FunctionTimedOut:\n\u001b[0;32m    544\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mgiven function is not applicable\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\func_timeout\\dafunc.py:85\u001b[0m, in \u001b[0;36mfunc_timeout\u001b[1;34m(timeout, func, args, kwargs)\u001b[0m\n\u001b[0;32m     82\u001b[0m thread \u001b[39m=\u001b[39m StoppableThread(target\u001b[39m=\u001b[39mfuncwrap, args\u001b[39m=\u001b[39m(args, kwargs))\n\u001b[0;32m     83\u001b[0m thread\u001b[39m.\u001b[39mdaemon \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m---> 85\u001b[0m thread\u001b[39m.\u001b[39;49mstart()\n\u001b[0;32m     86\u001b[0m thread\u001b[39m.\u001b[39mjoin(timeout)\n\u001b[0;32m     88\u001b[0m stopException \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\threading.py:962\u001b[0m, in \u001b[0;36mThread.start\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    960\u001b[0m         \u001b[39mdel\u001b[39;00m _limbo[\u001b[39mself\u001b[39m]\n\u001b[0;32m    961\u001b[0m     \u001b[39mraise\u001b[39;00m\n\u001b[1;32m--> 962\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_started\u001b[39m.\u001b[39;49mwait()\n",
+      "File \u001b[1;32mc:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\threading.py:622\u001b[0m, in \u001b[0;36mEvent.wait\u001b[1;34m(self, timeout)\u001b[0m\n\u001b[0;32m    620\u001b[0m signaled \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_flag\n\u001b[0;32m    621\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m signaled:\n\u001b[1;32m--> 622\u001b[0m     signaled \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_cond\u001b[39m.\u001b[39;49mwait(timeout)\n\u001b[0;32m    623\u001b[0m \u001b[39mreturn\u001b[39;00m signaled\n",
+      "File \u001b[1;32mc:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\threading.py:320\u001b[0m, in \u001b[0;36mCondition.wait\u001b[1;34m(self, timeout)\u001b[0m\n\u001b[0;32m    318\u001b[0m \u001b[39mtry\u001b[39;00m:    \u001b[39m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[39;00m\n\u001b[0;32m    319\u001b[0m     \u001b[39mif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 320\u001b[0m         waiter\u001b[39m.\u001b[39;49macquire()\n\u001b[0;32m    321\u001b[0m         gotit \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m    322\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
