--- a/src/LinearRegressionModel.ipynb
+++ b/src/LinearRegressionModel.ipynb
@@ -19,73 +19,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                            OLS Regression Results                            \n",
-      "==============================================================================\n",
-      "Dep. Variable:                 profit   R-squared:                       0.891\n",
-      "Model:                            OLS   Adj. R-squared:                  0.890\n",
-      "Method:                 Least Squares   F-statistic:                     824.5\n",
-      "Date:                Mon, 12 Jun 2023   Prob (F-statistic):               0.00\n",
-      "Time:                        12:37:21   Log-Likelihood:                -33985.\n",
-      "No. Observations:                3164   AIC:                         6.803e+04\n",
-      "Df Residuals:                    3132   BIC:                         6.823e+04\n",
-      "Df Model:                          31                                         \n",
-      "Covariance Type:            nonrobust                                         \n",
-      "==============================================================================\n",
-      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
-      "------------------------------------------------------------------------------\n",
-      "const       1.402e+04   1471.769      9.525      0.000    1.11e+04    1.69e+04\n",
-      "Unnamed: 0     0.2130      0.161      1.324      0.186      -0.103       0.529\n",
-      "month1       273.5248     69.517      3.935      0.000     137.221     409.828\n",
-      "month2       204.4115     70.222      2.911      0.004      66.726     342.097\n",
-      "month3       267.1657     73.463      3.637      0.000     123.126     411.206\n",
-      "month4       234.0173     67.421      3.471      0.001     101.824     366.211\n",
-      "month5       376.2671     68.709      5.476      0.000     241.548     510.986\n",
-      "month6       182.3831     67.837      2.689      0.007      49.374     315.393\n",
-      "month7       250.3513     69.677      3.593      0.000     113.734     386.968\n",
-      "month8       334.4966     70.036      4.776      0.000     197.176     471.817\n",
-      "month9       297.9741     70.869      4.205      0.000     159.020     436.928\n",
-      "month10      343.1333     69.870      4.911      0.000     206.138     480.129\n",
-      "month11      301.6312     69.185      4.360      0.000     165.978     437.284\n",
-      "month12      196.0518     68.144      2.877      0.004      62.440     329.664\n",
-      "month13      291.9085     68.948      4.234      0.000     156.720     427.097\n",
-      "month14      314.6838     67.521      4.661      0.000     182.295     447.073\n",
-      "month15      395.3695     69.625      5.679      0.000     258.854     531.885\n",
-      "month16      262.4719     68.247      3.846      0.000     128.658     396.286\n",
-      "month17      318.2404     70.491      4.515      0.000     180.026     456.454\n",
-      "month18      199.3534     73.670      2.706      0.007      54.907     343.800\n",
-      "month19      312.9236     69.174      4.524      0.000     177.294     448.554\n",
-      "month20      265.3299     70.376      3.770      0.000     127.342     403.318\n",
-      "month21      193.1723     70.537      2.739      0.006      54.869     331.475\n",
-      "month22      333.0878     70.230      4.743      0.000     195.387     470.789\n",
-      "month23      225.6602     71.134      3.172      0.002      86.186     365.134\n",
-      "month24      258.3718     68.987      3.745      0.000     123.108     393.636\n",
-      "s_DC1        109.4287     22.059      4.961      0.000      66.177     152.681\n",
-      "S_DC1         40.0618     14.329      2.796      0.005      11.966      68.158\n",
-      "s_DC2        101.3414     22.097      4.586      0.000      58.015     144.668\n",
-      "S_DC2        174.6589     14.628     11.940      0.000     145.977     203.341\n",
-      "s_r1        1599.8114     21.924     72.971      0.000    1556.825    1642.798\n",
-      "S_r1          37.8653     14.341      2.640      0.008       9.747      65.984\n",
-      "==============================================================================\n",
-      "Omnibus:                       20.505   Durbin-Watson:                   1.996\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               20.732\n",
-      "Skew:                          -0.191   Prob(JB):                     3.15e-05\n",
-      "Kurtosis:                       2.893   Cond. No.                     2.02e+04\n",
-      "==============================================================================\n",
+      "           mean       std  s_DC1  S_DC1  s_DC2  S_DC2   s_r1   S_r1\n",
+      "0     13.289917  0.447491   28.0   92.0   46.0   96.0   31.0   36.0\n",
+      "1     13.289917  0.447491   92.0  128.0  109.0  113.0   53.0   70.0\n",
+      "2     13.289917  0.447491   53.0  126.0   57.0   76.0   52.0   54.0\n",
+      "3     13.289917  0.447491  110.0  127.0   27.0   49.0  107.0  132.0\n",
+      "4     13.289917  0.447491   79.0  108.0   55.0  117.0   51.0  133.0\n",
+      "...         ...       ...    ...    ...    ...    ...    ...    ...\n",
+      "2851  15.129236  2.265378   52.0  110.0   56.0  100.0   42.0  101.0\n",
+      "2852  15.129236  2.265378   69.0  117.0  111.0  133.0  118.0  134.0\n",
+      "2853  15.129236  2.265378   61.0  125.0   95.0   99.0   62.0   93.0\n",
+      "2854  15.129236  2.265378  104.0  133.0   42.0   95.0  105.0  108.0\n",
+      "2855  15.129236  2.265378   46.0   88.0   32.0  101.0  121.0  130.0\n",
       "\n",
-      "Notes:\n",
-      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "[2] The condition number is large, 2.02e+04. This might indicate that there are\n",
-      "strong multicollinearity or other numerical problems.\n",
-      "mse: 128038493.03004067\n",
-      "mae: 9243.015475851565\n",
-      "mape: 0.04261405113703276\n"
+      "[2856 rows x 8 columns]\n"
      ]
     },
     {
@@ -95,19 +49,152 @@
       "/Users/nicholas/opt/anaconda3/lib/python3.9/site-packages/statsmodels/tsa/tsatools.py:142: FutureWarning: In a future version of pandas all arguments of concat except for the argument 'objs' will be keyword-only\n",
       "  x = pd.concat(x[::order], 1)\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([116462.92177014]), [37, 44, 30, 75, 31, 33]]\n",
+      "Variance inflation factor for const: 498.78\n",
+      "Variance inflation factor for mean: 1.29\n",
+      "Variance inflation factor for std: 1.21\n",
+      "Variance inflation factor for s_DC1: 1.35\n",
+      "Variance inflation factor for S_DC1: 1.39\n",
+      "Variance inflation factor for s_DC2: 1.35\n",
+      "Variance inflation factor for S_DC2: 1.37\n",
+      "Variance inflation factor for s_r1: 1.35\n",
+      "Variance inflation factor for S_r1: 1.36\n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                 profit   R-squared:                       0.972\n",
+      "Model:                            OLS   Adj. R-squared:                  0.972\n",
+      "Method:                 Least Squares   F-statistic:                     8291.\n",
+      "Date:                Mon, 03 Jul 2023   Prob (F-statistic):               0.00\n",
+      "Time:                        09:46:06   Log-Likelihood:                -17841.\n",
+      "No. Observations:                1913   AIC:                         3.570e+04\n",
+      "Df Residuals:                    1904   BIC:                         3.575e+04\n",
+      "Df Model:                           8                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const      -3692.9423   1390.370     -2.656      0.008   -6419.751    -966.134\n",
+      "mean         1.06e+04    107.786     98.373      0.000    1.04e+04    1.08e+04\n",
+      "std          172.1539    172.074      1.000      0.317    -165.320     509.627\n",
+      "s_DC1        -71.1415      2.644    -26.911      0.000     -76.326     -65.957\n",
+      "S_DC1       -246.5382      2.655    -92.855      0.000    -251.745    -241.331\n",
+      "s_DC2        -54.9813      2.640    -20.824      0.000     -60.159     -49.803\n",
+      "S_DC2       -109.5349      2.681    -40.863      0.000    -114.792    -104.278\n",
+      "s_r1        -111.7613      2.670    -41.862      0.000    -116.997    -106.525\n",
+      "S_r1        -421.6833      2.638   -159.861      0.000    -426.857    -416.510\n",
+      "==============================================================================\n",
+      "Omnibus:                      425.208   Durbin-Watson:                   1.924\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             2543.380\n",
+      "Skew:                          -0.905   Prob(JB):                         0.00\n",
+      "Kurtosis:                       8.351   Cond. No.                     4.91e+03\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 4.91e+03. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n",
+      "mse: 7314879.647151769\n",
+      "mae: 2031.620382646942\n",
+      "mape: 0.04503347046376432\n"
+     ]
     }
    ],
    "source": [
-    "data = pd.read_csv(\"./6_24months_US_car_data.csv\")\n",
+    "import pandas as pd\n",
+    "from sklearn import linear_model\n",
+    "import statsmodels.api as sm\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error as MSE\n",
+    "from sklearn.metrics import mean_absolute_error as MAE\n",
+    "from sklearn.metrics import mean_absolute_percentage_error as MAPE\n",
+    "from statsmodels.stats.outliers_influence import variance_inflation_factor as vif\n",
+    "import numpy as np \n",
+    "from State import State\n",
+    "import random\n",
+    "\n",
+    "data = pd.read_csv(\"6_24months_US_car_data.csv\")\n",
+    "# data = pd.read_csv(\"src/6_24months_mldata.csv\")\n",
+    "# data = pd.read_csv(\"src/72_onlinemldata.csv\")\n",
+    "# data = pd.read_csv(\"src/144_mldata.csv.csv\")\n",
+    "\n",
     "target = data['profit']\n",
-    "predictors = data.drop(['profit'], axis=1)\n",
+    "predictors = data.drop(['profit', data.columns[0]], axis=1)\n",
+    "\n",
+    "print(predictors)\n",
     "X_train, X_test, y_train, y_test = train_test_split(predictors, target, test_size=0.33, random_state=42)\n",
     "n_cols = predictors.shape[1]\n",
+    "\n",
+    "\n",
+    "# target = data.df['profit']\n",
+    "# predictors = data.df.drop(['profit'], axis=1)\n",
+    "# X_train, X_test, y_train, y_test = train_test_split(predictors, target, test_size=0.33, random_state=42)\n",
+    "\n",
+    "# regr = linear_model.LinearRegression()\n",
+    "# regr.fit(X_train, y_train)\n",
+    "\n",
+    "# print('Intercept: \\n', regr.intercept_)\n",
+    "# print('Coefficients: \\n', regr.coef_)\n",
+    "\n",
+    "# preds = regr.predict(X_test)\n",
+    "# print(MSE(y_test, preds))\n",
+    "\n",
     "X_train = sm.add_constant(X_train)\n",
     "model = sm.OLS(y_train.astype(float), X_train.astype(float)).fit()\n",
     "\n",
     "X_test = sm.add_constant(X_test)\n",
     "preds = model.predict(X_test.astype(float))\n",
+    "\n",
+    "df = pd.read_csv(\"./TOTALSA.csv\")\n",
+    "mean = df['TOTALSA'].mean()\n",
+    "std = df['TOTALSA'].std()\n",
+    "\n",
+    "tests = [[54, 63, 42, 47, 42, 49], np.round([42.65454086832623, 55.47066141610458, 45.23110339190882 , 69.56550258424139, 30.0, 50.14861820830117])]\n",
+    "\n",
+    "def test(model, mean, std, tests):\n",
+    "    state = State()\n",
+    "    state.create_state([-1 ,0, 1, 1, 2, 2], mean=mean, std=std)\n",
+    "    curr_max = 0\n",
+    "    lst = []\n",
+    "    for x in range(1000000):\n",
+    "        # s_DC1, S_DC1, s_DC2, S_DC2, s_r1, S_r1 = [random.randint(round(mean * 2), round(mean * 4)), random.randint(round(mean * 5), round(mean * 8)), random.randint(round(mean * 2), round(mean * 4)), random.randint(round(mean * 5), round(mean * 8)), random.randint(round(mean * 2), round(mean * 4)), random.randint(round(mean * 5), round(mean * 8))]\n",
+    "        s_DC1, S_DC1, s_DC2, S_DC2, s_r1, S_r1 = [random.randint(round(mean * 2), round(mean * 10)), random.randint(round(mean * 2), round(mean * 10)), random.randint(round(mean * 2), round(mean * 10)), random.randint(round(mean * 2), round(mean * 10)), random.randint(round(mean * 2), round(mean * 10)), random.randint(round(mean * 2), round(mean * 10))]\n",
+    "        if s_DC1 >= S_DC1 or s_DC2 >= S_DC2 or s_r1 >= S_r1:\n",
+    "            continue\n",
+    "\n",
+    "        params = [1, mean, std, s_DC1, S_DC1, s_DC2, S_DC2, s_r1, S_r1]\n",
+    "        preds = model.predict(params)\n",
+    "        if preds > curr_max:\n",
+    "            curr_max = preds\n",
+    "            lst = [s_DC1, S_DC1, s_DC2, S_DC2, s_r1, S_r1]\n",
+    "    for x in tests:\n",
+    "        params = [1, mean, std]\n",
+    "        params.extend(x)\n",
+    "        preds = model.predict(params)\n",
+    "        if preds > curr_max:\n",
+    "            curr_max = preds\n",
+    "            lst = x\n",
+    "\n",
+    "    return [curr_max, lst]\n",
+    "\n",
+    "# print('result', model.predict([1, mean, std, 0.0, 54, 63, 42, 47, 42, 49]))\n",
+    "\n",
+    "print(test(model, mean, std, tests))\n",
+    "\n",
+    "def vif_analysis(data):\n",
+    "    \"\"\"VIF analysis on the data dataframe\"\"\"\n",
+    "    for i in range(len(data.columns)):\n",
+    "        v=vif(np.matrix(data),i)\n",
+    "        print(\"Variance inflation factor for {}: {}\".format(data.columns[i],round(v,2)))\n",
+    "\n",
+    "vif_analysis(X_train)\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "print(model.summary())\n",
