--- a/RLsrc/RLTrain.ipynb
+++ b/RLsrc/RLTrain.ipynb
@@ -21,12 +21,24 @@
     "import time\n",
     "from datetime import datetime\n",
     "\n",
-    "from State import State\n",
+    "from RLState import RLState\n",
     "\n",
     "import torch\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from PPO import PPO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read Data\n",
+    "df = pd.read_csv(\"..\\src\\TOTALSA.csv\")\n",
+    "mean = df['TOTALSA'].mean()\n",
+    "std = df['TOTALSA'].std()"
    ]
   },
   {
@@ -39,8 +51,8 @@
     "def train():\n",
     "    print(\"============================================================================================\")\n",
     "\n",
-    "    env = State()\n",
-    "    env.create_state([-1, 0, 1, 1, 2, 2])\n",
+    "    env = RLState()\n",
+    "    env.create_state([-1, 0, 1, 1, 2, 2], mean=mean, std=std)\n",
     "    \n",
     "    has_continuous_action_space = False # continuous action space; else discrete\n",
     "\n",
@@ -146,7 +158,7 @@
     "        print_running_episodes += 1\n",
     "\n",
     "        i_episode += 1\n",
-    "    torch.save(ppo_agent.policy.state_dict(), \"./RLmodel2.pt\")\n"
+    "    torch.save(ppo_agent.policy.state_dict(), \"./RLmodel.pt\")\n"
    ]
   },
   {
